tests/parsing/cmc/errors/132.expected
File "tests/parsing/cmc/errors/132.cmc", line 1, character 31-32:
1 | (define-system sys :subsys (a ()))
                                   ^
Error while parsing a subsystem call, read a closing parenthesis,
      but expected a defined subsystem name.
